infrastructure-as-code/infra/kubernetes/applications/transmission/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-deployment
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: linuxserver/transmission:4.0.6
        ports:
        - containerPort: 9091
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        emptyDir: {}
      - name: downloads
        emptyDir: {}
