infrastructure-as-code/infra/kubernetes/applications/transmission/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: transmission.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission-service
            port:
              number: 80
